adding Janus -WIP

--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -42,6 +42,10 @@ http {
             alias /zoneminder/cache;
         }
 
+        location /javascript {
+            alias /usr/share/javascript/
+        }
+
         location /api/ {
             rewrite             ^/api(.+)$ /api/index.php?p=$1 last;
         }
