--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
         }
 
         location /javascript {
-            alias /usr/share/javascript/
+            alias /usr/share/javascript/;
         }
 
         location /api/ {
