revert for a second

--- a/.env
+++ b/.env
@@ -12,6 +12,12 @@ EMAIL_PORT=587
 EMAIL_ADDRESS=coolemail@gmail.com
 EMAIL_PASSWORD=very_secure_password
 
+JANUS_RTP_PORT_RANGE=20000-40000
+JANUS_NAT_IP=YOUR_IP
+JANUS_KEEP_PRIVATE_HOST=true
+JANUS_STREAM_KEY=<secret used in zoneminder options>
+JANUS_CORS_ALLOW_ORIGIN_URL=https://whatever
+
 # Don't change these unless you know what you're doing
 # MYSQL_HOST=db
 # PHP_MAX_CHILDREN=120
